[tool.poetry]
name = "fuzzypetprep"
version = "0.1.0"
description = ""
authors = ["Roland Haidari <roland.haidari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "^2.3.5"
nibabel = "^5.3.3"
matplotlib = "^3.10.8"
pandas = "^2.3.3"
scipy = "^1.17.0"
pathlib = "^1.0.1"
jinja2 = "^3.1.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
